--- a/T5/GestorLigas/src/main/resources/org/example/gestorligas/main-view.fxml
+++ b/T5/GestorLigas/src/main/resources/org/example/gestorligas/main-view.fxml
@@ -5,39 +5,48 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.gestorligas.controller.MainController"
->
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestorligas.controller.MainController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
-                <Menu mnemonicParsing="false" text="File">
+                <Menu mnemonicParsing="false" text="Acciones">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
+                        <MenuItem mnemonicParsing="false" text="Borrar" fx:id="menuBorrar"/>
+                        <MenuItem mnemonicParsing="false" text="Añadir" fx:id="menuAnadir"/>
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
+                <Menu mnemonicParsing="false" text="Ayuda">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="Ver autor" fx:id="menuAutor"/>
+                        <MenuItem mnemonicParsing="false" text="Salir" fx:id="menuSalir"/>
                     </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
-                    </items>
-                </Menu>
+
             </menus>
         </MenuBar>
     </top>
     <bottom>
-        <Button fx:id="btnVolver" mnemonicParsing="false" text="Volver" BorderPane.alignment="CENTER">
+        <Button fx:id="btnVolver" mnemonicParsing="false" text="Detalle" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets bottom="20.0"/>
+                <Insets bottom="20.0" />
             </BorderPane.margin>
         </Button>
     </bottom>
+   <center>
+      <TableView fx:id="tabla" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="columnaNombre" prefWidth="75.0" text="Nombre" />
+          <TableColumn fx:id="columnaValor" prefWidth="75.0" text="Valor mercado" />
+            <TableColumn fx:id="columnaNacionalidad" prefWidth="75.0" text="Nacionalidad" />
+            <TableColumn fx:id="columnaGoles" prefWidth="75.0" text="Nº goles" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </center>
 </BorderPane>
